# eplatform

./: .coveragerc  .gitignore  .gitmodules  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  buildscript.py  pyproject.toml  ruff.toml
.github/: info.py  install-vulkan-sdk.py  test-multiple-displays.sh  xvfb-test.sh
.github/actions/install-mesa/: action.yml
.github/actions/install-software-renderer/: action.yml
.github/actions/install-swiftshader/: action.yml
.github/actions/install-vulkan-sdk/: action.yml  install-vulkan-sdk.py  setup-vulkan-sdk.py
.github/workflows/: check.yml  release.yml  vulkan-sdk.yml
src/eplatform/: __init__.py  _controller.py  _display.py  _eplatform.c  _eplatform.pyi  _event_loop.py  _keyboard.py  _mouse.py  _platform.py  _type.py  _window.py
test/: conftest.py  test_controller.py  test_display.py  test_event_loop.py  test_keyboard.py  test_mouse.py  test_platform.py  test_render_target.py  test_window.py
