[project]
requires-python = ">=3.12"

[tool.poetry]
name = "eplatform"
version = "0.6.0"
description = "Operating System Library"
authors = ["Erik Soma <stillusingirc@gmail.com>"]

[tool.poetry.build]
generate-setup-file = false
script = "buildscript.py"

[tool.poetry.dependencies]
python = "^3.12"
emath = "^0.1.13"
eevent = "^0.1.0"
egeometry = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core==1.9.1", "setuptools==69.0.2"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.pyright]
venvPath = "."
venv = ".venv"
