[project]
name = "eplatform"
requires-python = ">=3.14"
version = "0.21.0"
description = "Operating System Library"
authors = [
    {name = "Erik Soma", email= "stillusingirc@gmail.com"}
]

[tool.poetry]
include = [
    {path = "src/eplatform/*.so", format = "wheel"},
    {path = "src/eplatform/*.pyd", format = "wheel"},
]

[tool.poetry.build]
generate-setup-file = false
script = "buildscript.py"

[tool.poetry.dependencies]
python = "^3.14"
emath = "^0"
eevent = "^0"
egeometry = "^0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pywin32 = {version = ">=311", markers = "sys_platform == 'win32'"}

[build-system]
requires = ["poetry-core", "setuptools==69.0.2"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.cibuildwheel.linux]
before-all = [
    "dnf install ninja-build -y",
    "dnf install gcc git-core make cmake alsa-lib-devel fribidi-devel pulseaudio-libs-devel -y",
    "dnf install pipewire-devel libX11-devel libXext-devel libXrandr-devel libXcursor-devel -y",
    "dnf install libXfixes-devel libXi-devel libXScrnSaver-devel libXtst-devel dbus-devel -y",
    "dnf install ibus-devel systemd-devel mesa-libGL-devel libxkbcommon-devel -y",
    "dnf install mesa-libGLES-devel mesa-libEGL-devel vulkan-devel wayland-devel -y",
    "dnf install wayland-protocols-devel libdrm-devel mesa-libgbm-devel libusb1-devel -y",
    "dnf install libthai-devel -y",
]
repair-wheel-command = "auditwheel repair -w {dest_dir} --exclude 'libSDL3.so.0' {wheel}"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [
    "apk add samurai libxcursor-dev libxfixes-dev libx11-dev libxext-dev libxrandr-dev libxi-dev",
    "apk add libxscrnsaver-dev libxtst-dev vulkan-headers vulkan-loader-dev",
]

[tool.cibuildwheel.windows]
before-all = [
    "choco install ninja",
]

[tool.cibuildwheel.macos]
before-all = [
    "brew install ninja vulkan-loader vulkan-headers molten-vk",
]
repair-wheel-command = ""

[tool.cibuildwheel]
enable = ["cpython-prerelease"]
skip = ["cp3??t-*", "*-win32"]
